<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosapi_msg</name>
  <version>0.1.0</version>
  <description>A TCP Server(Websocket part keeps update with https://github.com/RobotWebTools/rosbridge_suite) interface to rosbridge. And it is aimed at application on windows10 with Ros2 on it</description>
  <maintainer email="gaojialong@nudt.edu.cn">Gao Geolone</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="jacob@foxglove.dev">Jacob Bandes-Storch</maintainer>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2pkg</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <!--
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>shape_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>rmw_dds_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>